--- a/package.json
+++ b/package.json
@@ -23,41 +23,74 @@
     "update": "nx migrate latest",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "private": true,
   "dependencies": {
-    "document-register-element": "1.13.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "@apollo/react-common": "^3.1.4",
+    "@apollo/react-hooks": "^3.1.5",
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
+    "@nestjs/common": "^7.1.1",
+    "@nestjs/core": "^7.1.1",
+    "@nestjs/graphql": "^7.3.11",
+    "@nestjs/platform-express": "^7.1.1",
+    "@nestjs/serve-static": "^2.1.1",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-server-express": "^2.14.1",
+    "apollo-utilities": "^1.3.4",
+    "document-register-element": "1.14.3",
+    "express-zip": "^3.0.0",
+    "graphql": "^15.0.0",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tools": "^6.0.3",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "reflect-metadata": "^0.1.13",
+    "subscriptions-transport-ws": "^0.9.16",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
-    "@nrwl/workspace": "9.3.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.8.3",
-    "prettier": "2.0.4",
-    "@nrwl/react": "9.3.0",
-    "@nrwl/jest": "9.3.0",
-    "jest": "25.2.3",
-    "@types/jest": "25.1.4",
-    "ts-jest": "25.2.1",
-    "cypress": "^4.1.0",
+    "@graphql-codegen/cli": "1.15.0",
+    "@graphql-codegen/typescript": "1.15.0",
+    "@graphql-codegen/typescript-operations": "1.15.0",
+    "@graphql-codegen/typescript-react-apollo": "1.15.0",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.1.1",
     "@nrwl/cypress": "9.3.0",
-    "@nrwl/web": "9.3.0",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
-    "@testing-library/react": "9.4.0",
     "@nrwl/eslint-plugin-nx": "9.3.0",
-    "@typescript-eslint/parser": "2.19.2",
-    "@typescript-eslint/eslint-plugin": "2.19.2",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-import": "2.19.1",
+    "@nrwl/jest": "9.3.0",
+    "@nrwl/nest": "^9.3.0",
+    "@nrwl/node": "9.3.0",
+    "@nrwl/react": "9.3.0",
+    "@nrwl/web": "9.3.0",
+    "@nrwl/workspace": "9.3.0",
+    "@testing-library/react": "10.0.4",
+    "@types/jest": "25.2.3",
+    "@types/node": "~14.0.5",
+    "@types/react": "16.9.35",
+    "@types/react-dom": "16.9.8",
+    "@typescript-eslint/eslint-plugin": "3.0.2",
+    "@typescript-eslint/parser": "3.0.2",
+    "cypress": "^4.1.0",
+    "dotenv": "8.2.0",
+    "eslint": "7.1.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "2.3.0"
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.4",
+    "jest": "26.0.1",
+    "prettier": "2.0.5",
+    "ts-jest": "26.0.0",
+    "ts-node": "~8.10.2",
+    "tslint": "~6.1.2",
+    "typescript": "~3.9.3"
   }
 }
